Get author name for announcements and add search endpoint
